--- a/Book/Rent/templates/sign_in_modal.html
+++ b/Book/Rent/templates/sign_in_modal.html
@@ -2,7 +2,7 @@
 <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="signInModalLabel">Sign Up</h5>
+        <h5 class="modal-title" id="signInModalLabel">Sign In</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -13,7 +13,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary" onclick="submitSignUpForm()">Sign In</button>
+        <button type="button" class="btn btn-primary" onclick="submitSignInForm()">Sign In</button>
       </div>
     </div>
   </div>
